--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "description": "a framework for myself",
     "licence": "MIT",
 
+    "require": {
+        "pimple/pimple" : "3.0.2"
+    },
     "autoload": {
         "classmap": ["framework/"],
         "psr-4": {
