--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "symfony/http-foundation": "2.7.*"
     },
     "autoload": {
-        "classmap": ["framework/"],
+        "classmap": ["framework/", "app/"],
         "psr-4": {
-            "honji\\": "framework"
+            "App\\": "app",
+            "Honji\\": "framework"
         },
         "files": []
     }
